tests/NormalTests/paczka1/fuzzy1/97065242.err
Error in line 9: 0Ywv A829 39,4
Error in line 11: 0Ywv A226 87,2
Error in line 16: S429 S429 3,8
Error in line 24: idwj9jU S429 1,5
Error in line 20: MXsldZg2Gg S429 50,8
Error in line 18: 2V6AUNXVTG A226 10,3
Error in line 32: SJ5 S22 -2,9
Error in line 35: 0Ywv A829 73,8
Error in line 28: SJ5 S22 57,2
